# evo-nas

./: .gitignore  COMMANDS.md  LICENSE  README.md  app.py  get_design.py  pyproject.toml  requirements.txt  run_search.py
.github/workflows/: tests.yml
configs/: cifar10.yaml  fake.yaml
docs/plans/: qd-nas-implementation.md
docs/specs/: 2026-07-21-depth-descriptor.md
docs/superpowers/plans/: 2026-07-14-qd-nas.md
docs/superpowers/specs/: 2026-07-14-qd-nas-design.md
evonas/: archive.py  benchmark.py  cli_design.py  experiment.py  genome.py  ground_truth.py  map_elites.py  metrics.py  nb201.py  operators.py  plots.py  random_search.py  select.py  uidata.py
scripts/: export_nb201_csv.py
tests/: test_archive.py  test_benchmark.py  test_experiment.py  test_genome.py  test_get_design_cli.py  test_ground_truth.py  test_map_elites.py  test_metrics.py  test_nb201.py  test_operators.py  test_plots.py  test_random_search.py  test_run_search_cli.py  test_select.py  test_smoke.py  test_uidata.py
