[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evonas"
version = "0.1.0"
description = "Quality-diversity neural architecture search (MAP-Elites) on NAS-Bench-201"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Aishwarya Wambule" }]
keywords = ["neural-architecture-search", "quality-diversity", "map-elites",
            "evolutionary-algorithms", "nas-bench-201"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# the Streamlit explorer is optional — the library and CLIs work without it
ui = ["streamlit>=1.30"]
# only needed once, to export the real NAS-Bench-201 data to CSV
data = ["nats_bench>=1.8", "gdown>=5.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/aishwaryawambule/evo-nas"
Repository = "https://github.com/aishwaryawambule/evo-nas"

[project.scripts]
evonas-search = "evonas.cli_search:main"
evonas-design = "evonas.cli_design:main"

[tool.setuptools]
packages = ["evonas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
